--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.45.4",
     "@supabase/ssr": "^0.5.1",
     "framer-motion": "^11.9.0",
+    "gsap": "^3.12.5",
     "zod": "^3.23.8",
     "date-fns": "^3.6.0",
     "clsx": "^2.1.1",
