--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/ssr": "^0.5.1",
     "framer-motion": "^11.9.0",
     "gsap": "^3.12.5",
+    "@gsap/react": "^2.1.1",
     "zod": "^3.23.8",
     "date-fns": "^3.6.0",
     "clsx": "^2.1.1",
